--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,10 @@
     <h1>Tip Guide</h1>
     <form action="" id="tipForm">
       <label for="bill">Bill</label>
-      <input id='bill' type="text" name="bill" placeholder="100" required>
+      <input id='bill' type="text" name="bill" placeholder="Amount" required>
       <label for="tip">Tip</label>
       <select id='tip' type="number" name="tip" required>
-        <option value="">Select a Tip Percentage</option>
+        <option value="">Select a Tip</option>
         <option value=".10">10 %</option>
         <option value=".12">12 %</option>
         <option value=".15">15 %</option>
@@ -22,9 +22,8 @@
         <option value=".20">20 %</option>
       </select>
       <button type="submit">Submit</button>
-      <!-- <input type="button" value="reset-form" > -->
     </form>
-    <h2 id="calculatedTip"></h2>
+    <h2 id="calculatedTip">Remember Tip Generously</h2>
     <h2 id="calculatedTotal"></h2>
     <script src="../src/main.js" charset="utf-8"></script>
   </main>
