WIP, adds overflow to auto and minor height changes

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <h1>Tip Guide</h1>
     <form action="" id="tipForm">
       <label for="bill">Bill</label>
-      <input id='bill' type="text" name="bill" placeholder="Amount" required>
+      <input id='bill' type="number" name="bill" placeholder="Amount" required>
       <label for="tip">Tip</label>
       <select id='tip' type="number" name="tip" required>
         <option value="">Select a Tip</option>
