--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,18 @@
     <h1>Tip Guide</h1>
     <form action="" id="tipForm">
       <label for="bill">Bill</label>
-      <input id='bill' type="number" name="bill" placeholder="Amount" required>
+      <input 
+        id='bill'
+        type="number"
+        name="bill"
+        placeholder="Amount"
+        min="0"
+        step="0.01"
+        title="Currency"
+        pattern="^\d+(?:\.\d{1,2})?$"
+        lang="nb"
+        required
+      >
       <label for="tip">Tip</label>
       <select id='tip' type="number" name="tip" required>
         <option value="">Select a Tip</option>
