--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
   <main>
+    <div class="circle-1"></div>
+    <div class="circle-2"></div>
+    <div class="circle-3"></div>
     <h1>Tip Guide</h1>
     <form action="" id="tipForm">
       <label for="bill">Bill</label>
@@ -31,6 +34,7 @@
         <option value=".15">15 %</option>
         <option value=".18">18 %</option>
         <option value=".20">20 %</option>
+        <option value=".25">25 %</option>
       </select>
       <button type="submit">Submit</button>
     </form>
@@ -38,5 +42,6 @@
     <h2 id="calculatedTotal"></h2>
     <script src="../src/main.js" charset="utf-8"></script>
   </main>
+
 </body>
 </html>
